--- a/_pages/publications.html
+++ b/_pages/publications.html
@@ -1,36 +1,16 @@
 ---
-layout: archive
-title: "Publications"
-permalink: /publications/
-author_profile: true
+title: "Latent Action Pretraining Through World Modeling"
+collection: publications
+permalink: /publication/2025-lawm
+excerpt: 'Teaching robots from human videos through self-supervised world modeling'
+date: 2025-01-15
+venue: 'Submitted to ICRA 2026'
+paperurl: 'https://arxiv.org/abs/2509.18428'
+citation: 'Bahey Tharwat, Yara Nasser, Ali Abouzied, Ian Reid. (2025). "Latent Action Pretraining Through World Modeling." <i>arXiv preprint arXiv:2509.18428</i>.'
 ---
 
-{% if site.author.googlescholar %}
-  <div class="wordwrap">You can also find my articles on <a href="{{site.author.googlescholar}}">my Google Scholar profile</a>.</div>
-{% endif %}
+Vision-Language-Action (VLA) models enable robots to follow language instructions but often require large labeled datasets. We propose LAWM, a model-agnostic framework that learns latent actions through world modeling from unlabeled videos.
 
-{% include base_path %}
+Supervised by Prof. Ian D. Reid at Mohamed bin Zayed University of Artificial Intelligence (MBZUAI).
 
-<!-- New style rendering if publication categories are defined -->
-{% if site.publication_category %}
-  {% for category in site.publication_category  %}
-    {% assign title_shown = false %}
-    {% for post in site.publications reversed %}
-      {% if post.category != category[0] %}
-        {% continue %}
-      {% endif %}
-      {% unless title_shown %}
-        <h2>{{ category[1].title }}</h2><hr />
-        {% assign title_shown = true %}
-      {% endunless %}
-      {% include archive-single.html %}
-    {% endfor %}
-  {% endfor %}
-{% else %}
-  {% for post in site.publications reversed %}
-    {% include archive-single.html %}
-  {% endfor %}
-{% endif %}
-
-
-
+[Download paper here](https://arxiv.org/abs/2509.18428)
